# joystick_owerlay

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  cli.py  configure.py  constructor.md  doctor.py  engine_sys_path.py  main.py  pyproject.toml  requirements.txt  tournament.py
.github/workflows/: ci.yml
arcade/assets/binding_templates/: joystick_bindings.json  mixbox_bindings.json
arcade/engine/utils/: utils.py  (+5 more)
configs/defaults/: pack_types.json  physical_buttons.json  semantic_tokens.json
configs/migrations/: index.json
configs/schema/: profile.schema.v3.json
docs/: README.md
docs/archive/: audit_report.md  bitacora.md  findings_registry.md  parity_matrix.md  windows_parity_rollout.md
docs/developer/: agent_runtime_v1.md  audit_contract_v1.md  data_contract_v1.md  data_contract_windows_v1.md  migrations.md  product_scope.md  repository_layout.md  reset_matrix.md
docs/reference/: external_sources.md  layout_reference.md
docs/security/: security_model.md
docs/streamer/: capture_modes.md  obs_setup.md
docs/user/: README.md  doctor.md  installation.md  profile_zip.md  quick_start.md  tournament_mode.md  training_mode.md  troubleshooting.md
install/: install_windows.bat  installer.iss  update_windows.bat
install/templates/: install_manifest.schema.json
install/windows/: install_ops.py  setup_wizard.py  uninstall_wizard.py
scripts/: check_doc_links.py  check_version_alignment.py
tests/: conftest.py  test_config_paths.py  test_hud_layout.py  test_maps_import_win32.py  test_state_navigation.py  test_win32_menu_policy.py  test_zip_security.py
(+45 files in other folders)
