[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joystick-overlay"
version = "0.3.1"
description = "Joystick Owerlay: overlay arcade (Windows)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
	"pygame==2.6.1",
	"keyboard==0.13.5",
]

[project.scripts]
joystick-overlay = "cli:run"

[tool.setuptools.packages.find]
where = ["arcade/engine"]

[tool.setuptools]
include-package-data = true
py-modules = ["cli", "engine_sys_path", "main", "configure", "tournament", "doctor"]
